code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_76.wast
(assert_invalid
  (module (func $type-break-i32-vs-i64 (result i32)
    (block (result i32) (br 0 (i64.const 1)) (i32.const 1))
  ))
  "type mismatch"
)